--- a/ComplaintsManagement.UI/ComplaintsManagement.UI.csproj
+++ b/ComplaintsManagement.UI/ComplaintsManagement.UI.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -48,10 +49,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="FluentValidation, Version=9.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -197,48 +198,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202102130309308_Initial Migration.cs" />
-    <Compile Include="Migrations\202102130309308_Initial Migration.Designer.cs">
-      <DependentUpon>202102130309308_Initial Migration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102130400441_Costumer entitie added.cs" />
-    <Compile Include="Migrations\202102130400441_Costumer entitie added.Designer.cs">
-      <DependentUpon>202102130400441_Costumer entitie added.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102140305074_ClaimsOptions foreign key dropped from Complaints entite.cs" />
-    <Compile Include="Migrations\202102140305074_ClaimsOptions foreign key dropped from Complaints entite.Designer.cs">
-      <DependentUpon>202102140305074_ClaimsOptions foreign key dropped from Complaints entite.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102141408326_Roles and UsersRoles entities removed, new field added to ApplicationUser.cs" />
-    <Compile Include="Migrations\202102141408326_Roles and UsersRoles entities removed, new field added to ApplicationUser.Designer.cs">
-      <DependentUpon>202102141408326_Roles and UsersRoles entities removed, new field added to ApplicationUser.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102141518289_Costumers entity renamed to Customers.cs" />
-    <Compile Include="Migrations\202102141518289_Costumers entity renamed to Customers.Designer.cs">
-      <DependentUpon>202102141518289_Costumers entity renamed to Customers.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102142049499_AgentId removed from Complaints entitie.cs" />
-    <Compile Include="Migrations\202102142049499_AgentId removed from Complaints entitie.Designer.cs">
-      <DependentUpon>202102142049499_AgentId removed from Complaints entitie.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102142246090_CustomersId removed from Complaints entitie.cs" />
-    <Compile Include="Migrations\202102142246090_CustomersId removed from Complaints entitie.Designer.cs">
-      <DependentUpon>202102142246090_CustomersId removed from Complaints entitie.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102142259562_Commment field renamed to Comment in Complaints entitie.cs" />
-    <Compile Include="Migrations\202102142259562_Commment field renamed to Comment in Complaints entitie.Designer.cs">
-      <DependentUpon>202102142259562_Commment field renamed to Comment in Complaints entitie.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102142314277_CompletedAt field changed to nullable in Complaints entitie.cs" />
-    <Compile Include="Migrations\202102142314277_CompletedAt field changed to nullable in Complaints entitie.Designer.cs">
-      <DependentUpon>202102142314277_CompletedAt field changed to nullable in Complaints entitie.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CustomersViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\TaskResult.cs" />
+    <Compile Include="NavigationRoutes\NamedRoute.cs" />
+    <Compile Include="NavigationRoutes\NavigationExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Interfaces\IComplaintsOptionsRepository.cs" />
     <Compile Include="Services\Interfaces\IComplaintsRepository.cs" />
@@ -255,6 +221,8 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-1.1.0.css" />
+    <Content Include="Content\bootstrap-1.1.0.min.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -505,6 +473,7 @@
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
     <Content Include="Scripts\esm\popper.min.js" />
+    <Content Include="Scripts\html5shiv.js" />
     <Content Include="Scripts\index.js.flow" />
     <Content Include="Scripts\esm\popper.min.js.map" />
     <Content Include="Scripts\esm\popper.js.map" />
@@ -530,6 +499,8 @@
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -686,39 +657,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202102130309308_Initial Migration.resx">
-      <DependentUpon>202102130309308_Initial Migration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102130400441_Costumer entitie added.resx">
-      <DependentUpon>202102130400441_Costumer entitie added.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102140305074_ClaimsOptions foreign key dropped from Complaints entite.resx">
-      <DependentUpon>202102140305074_ClaimsOptions foreign key dropped from Complaints entite.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102141408326_Roles and UsersRoles entities removed, new field added to ApplicationUser.resx">
-      <DependentUpon>202102141408326_Roles and UsersRoles entities removed, new field added to ApplicationUser.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102141518289_Costumers entity renamed to Customers.resx">
-      <DependentUpon>202102141518289_Costumers entity renamed to Customers.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102142049499_AgentId removed from Complaints entitie.resx">
-      <DependentUpon>202102142049499_AgentId removed from Complaints entitie.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102142246090_CustomersId removed from Complaints entitie.resx">
-      <DependentUpon>202102142246090_CustomersId removed from Complaints entitie.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102142259562_Commment field renamed to Comment in Complaints entitie.resx">
-      <DependentUpon>202102142259562_Commment field renamed to Comment in Complaints entitie.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102142314277_CompletedAt field changed to nullable in Complaints entitie.resx">
-      <DependentUpon>202102142314277_CompletedAt field changed to nullable in Complaints entitie.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -754,7 +697,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
   </Target>
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
