--- a/ComplaintsManagement.UI/packages.config
+++ b/ComplaintsManagement.UI/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.6.0" targetFramework="net472" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
+  <package id="EFCodeFirst" version="0.8" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="html5shiv" version="0.1.0.6" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -14,6 +16,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
@@ -26,9 +29,11 @@
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="navigationroutes.mvc4" version="1.0.23" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="Twitter.Bootstrap" version="1.1.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
