--- a/ComplaintsManagement.Infrastructure/ComplaintsManagement.Infrastructure.csproj
+++ b/ComplaintsManagement.Infrastructure/ComplaintsManagement.Infrastructure.csproj
@@ -131,6 +131,7 @@
     <Compile Include="DTOs\ComplaintsOptionsDto.cs" />
     <Compile Include="DTOs\CustomersProductsDto.cs" />
     <Compile Include="DTOs\CustomersDto.cs" />
+    <Compile Include="DTOs\DepartmentsDto.cs" />
     <Compile Include="DTOs\ProductsDto.cs" />
     <Compile Include="DTOs\StatusDto.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
@@ -141,7 +142,7 @@
     <Compile Include="Entities\ComplaintsOptions.cs" />
     <Compile Include="Entities\CustomersProducts.cs" />
     <Compile Include="Entities\Custumers.cs" />
-    <Compile Include="Entities\Deparments.cs" />
+    <Compile Include="Entities\Departments.cs" />
     <Compile Include="Entities\Products.cs" />
     <Compile Include="Entities\Status.cs" />
     <Compile Include="Helpers\Constants.cs" />
