roles repository added

--- a/ComplaintsManagement.Infrastructure/ComplaintsManagement.Infrastructure.csproj
+++ b/ComplaintsManagement.Infrastructure/ComplaintsManagement.Infrastructure.csproj
@@ -124,24 +124,23 @@
     <Compile Include="Database\DepartmentsEntityTypeConfiguration.cs" />
     <Compile Include="Database\ProductsEntityTypeConfiguration.cs" />
     <Compile Include="Database\StatusEntityTypeConfiguration.cs" />
-    <Compile Include="Database\CustomersEntityTypeConfiguration.cs" />
     <Compile Include="DTOs\BinnacleDto.cs" />
     <Compile Include="DTOs\ClaimsOptionsDto.cs" />
     <Compile Include="DTOs\ComplaintsDto.cs" />
     <Compile Include="DTOs\ComplaintsOptionsDto.cs" />
     <Compile Include="DTOs\CustomersProductsDto.cs" />
-    <Compile Include="DTOs\CustomersDto.cs" />
     <Compile Include="DTOs\DepartmentsDto.cs" />
     <Compile Include="DTOs\ProductsDto.cs" />
+    <Compile Include="DTOs\RolesDto.cs" />
     <Compile Include="DTOs\StatusDto.cs" />
+    <Compile Include="DTOs\UsersDto.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\Binnacle.cs" />
+    <Compile Include="Entities\Claims.cs" />
     <Compile Include="Entities\ClaimsOptions.cs" />
     <Compile Include="Entities\Complaints.cs" />
-    <Compile Include="Entities\ComplaintsAgents.cs" />
     <Compile Include="Entities\ComplaintsOptions.cs" />
     <Compile Include="Entities\CustomersProducts.cs" />
-    <Compile Include="Entities\Custumers.cs" />
     <Compile Include="Entities\Departments.cs" />
     <Compile Include="Entities\Products.cs" />
     <Compile Include="Entities\Status.cs" />
