--- a/ComplaintsManagement.UI/ComplaintsManagement.UI.csproj
+++ b/ComplaintsManagement.UI/ComplaintsManagement.UI.csproj
@@ -204,6 +204,18 @@
     <Compile Include="Migrations\202103160026302_initial migration.designer.cs">
       <DependentUpon>202103160026302_initial migration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103211608485_departments fk added to ComplaintsOptions.cs" />
+    <Compile Include="Migrations\202103211608485_departments fk added to ComplaintsOptions.designer.cs">
+      <DependentUpon>202103211608485_departments fk added to ComplaintsOptions.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202103211735334_add departmentsId fk to user entity.cs" />
+    <Compile Include="Migrations\202103211735334_add departmentsId fk to user entity.designer.cs">
+      <DependentUpon>202103211735334_add departmentsId fk to user entity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202103212028495_UsersId adde to complaints entity.cs" />
+    <Compile Include="Migrations\202103212028495_UsersId adde to complaints entity.designer.cs">
+      <DependentUpon>202103212028495_UsersId adde to complaints entity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CustomersViewModel.cs" />
@@ -397,6 +409,8 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
+    <Content Include="Content\Select2\select2.css" />
+    <Content Include="Content\Select2\select2.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -521,6 +535,8 @@
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
     <Content Include="Scripts\popper.min.js" />
+    <Content Include="Scripts\Select2\select2.js" />
+    <Content Include="Scripts\Select2\select2.min.js" />
     <Content Include="Scripts\site.js" />
     <Content Include="Scripts\src\index.js" />
     <Content Include="Scripts\src\methods\defaults.js" />
@@ -658,6 +674,7 @@
     <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Roles\AddUserRole.cshtml" />
     <Content Include="Views\Roles\_userRoleModal.cshtml" />
+    <Content Include="Views\Complaints\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -687,6 +704,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202103160026302_initial migration.resx">
       <DependentUpon>202103160026302_initial migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103211608485_departments fk added to ComplaintsOptions.resx">
+      <DependentUpon>202103211608485_departments fk added to ComplaintsOptions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103211735334_add departmentsId fk to user entity.resx">
+      <DependentUpon>202103211735334_add departmentsId fk to user entity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103212028495_UsersId adde to complaints entity.resx">
+      <DependentUpon>202103212028495_UsersId adde to complaints entity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
