--- a/ComplaintsManagement.Infrastructure/ComplaintsManagement.Infrastructure.csproj
+++ b/ComplaintsManagement.Infrastructure/ComplaintsManagement.Infrastructure.csproj
@@ -133,6 +133,7 @@
     <Compile Include="DTOs\ProductsDto.cs" />
     <Compile Include="DTOs\RolesDto.cs" />
     <Compile Include="DTOs\StatusDto.cs" />
+    <Compile Include="DTOs\TicketTypesDto.cs" />
     <Compile Include="DTOs\UsersDto.cs" />
     <Compile Include="DTOs\UsersRolesDto.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
@@ -141,6 +142,7 @@
     <Compile Include="Entities\ClaimsOptions.cs" />
     <Compile Include="Entities\Complaints.cs" />
     <Compile Include="Entities\ComplaintsOptions.cs" />
+    <Compile Include="Entities\TicketTypes.cs" />
     <Compile Include="Entities\CustomersProducts.cs" />
     <Compile Include="Entities\Departments.cs" />
     <Compile Include="Entities\Products.cs" />
