--- a/ComplaintsManagement.UI/ComplaintsManagement.UI.csproj
+++ b/ComplaintsManagement.UI/ComplaintsManagement.UI.csproj
@@ -216,11 +216,16 @@
     <Compile Include="Migrations\202103212028495_UsersId adde to complaints entity.designer.cs">
       <DependentUpon>202103212028495_UsersId adde to complaints entity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202104090410577_TicketTypes and Binnacle entities added.cs" />
+    <Compile Include="Migrations\202104090410577_TicketTypes and Binnacle entities added.designer.cs">
+      <DependentUpon>202104090410577_TicketTypes and Binnacle entities added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CustomersViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Models\TaskResult.cs" />
     <Compile Include="NavigationRoutes\NamedRoute.cs" />
     <Compile Include="NavigationRoutes\NavigationExtensions.cs" />
@@ -713,6 +718,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202103212028495_UsersId adde to complaints entity.resx">
       <DependentUpon>202103212028495_UsersId adde to complaints entity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104090410577_TicketTypes and Binnacle entities added.resx">
+      <DependentUpon>202104090410577_TicketTypes and Binnacle entities added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
