--- a/ComplaintsManagement.Infrastructure/ComplaintsManagement.Infrastructure.csproj
+++ b/ComplaintsManagement.Infrastructure/ComplaintsManagement.Infrastructure.csproj
@@ -132,6 +132,7 @@
     <Compile Include="DTOs\DepartmentsDto.cs" />
     <Compile Include="DTOs\ProductsDto.cs" />
     <Compile Include="DTOs\RolesDto.cs" />
+    <Compile Include="DTOs\ServiceRateDto.cs" />
     <Compile Include="DTOs\StatusDto.cs" />
     <Compile Include="DTOs\TicketTypesDto.cs" />
     <Compile Include="DTOs\UsersDto.cs" />
@@ -142,6 +143,7 @@
     <Compile Include="Entities\ClaimsOptions.cs" />
     <Compile Include="Entities\Complaints.cs" />
     <Compile Include="Entities\ComplaintsOptions.cs" />
+    <Compile Include="Entities\ServiceRate.cs" />
     <Compile Include="Entities\TicketTypes.cs" />
     <Compile Include="Entities\CustomersProducts.cs" />
     <Compile Include="Entities\Departments.cs" />
